--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,5 @@
-<html>
-    <head>
-        <title>{{ title }} - Microblog</title>
-    </head>
-    <body>
-        <h1>Hello, {{ user.username }}!</h1>
-    </body>
-</html>
+{% extends "header.html" %}
+
+{% block content %}
+<h1>Привет! Ты хочешь построить интересный маршрут или посетить места интереса? Тогда выбери нужный пункт меню и отправляйся в путь!</h1>
+{% endblock %}
