--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -7,6 +7,7 @@
    width: 860px;
 }
    </style>
+<h1>Маршрут "{{ routeName }}"</h1>
 <iframe src="{{ url }}" width="860" height="700" frameborder="1" allowfullscreen="true"></iframe>
 {% if desc  %}
     <div> 
