--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -7,7 +7,12 @@
    width: 860px;
 }
    </style>
-<h1>Маршрут "{{ routeName }}"</h1>
+{% if routeName  %}
+    <h1>Маршрут "{{ routeName }}"</h1>
+{% endif %}
+{% if pointName  %}
+    <h1>достопримечательность "{{ pointName }}"</h1>
+{% endif %}
 <iframe src="{{ url }}" width="860" height="700" frameborder="1" allowfullscreen="true"></iframe>
 {% if desc  %}
     <div> 
