--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -11,7 +11,7 @@
     <h1>Маршрут "{{ routeName }}"</h1>
 {% endif %}
 {% if pointName  %}
-    <h1>достопримечательность "{{ pointName }}"</h1>
+    <h1>Точка интереса "{{ pointName }}"</h1>
 {% endif %}
 <iframe src="{{ url }}" width="860" height="700" frameborder="1" allowfullscreen="true"></iframe>
 {% if desc  %}
