Add city select and adding points and routes

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -11,6 +11,8 @@
             <a href="/index">Домашняя</a>
             <a href="/select-route">Список маршрутов</a>
             <a href="/select-point">Посмотреть список достопримечательностей</a>
+            <a href="/add-point">Добавить точку</a>
+            <a href="/create-route">Создать маршрут</a>
         </div> 
         {% block content %}{% endblock %}</center>
     </body>
