--- a/app/templates/addPoint.html
+++ b/app/templates/addPoint.html
@@ -12,9 +12,9 @@
     <input type="text" id="city" name="city"><br><br>
     <label for="lname">Название точки:</label>
     <input type="text" id="name" name="name"><br><br>
-    <label for="lname">Позиция по X:</label>
+    <label for="lname">Координата 1:</label>
     <input id="posX" name="posX" pattern="[0-9.]+" type="text"><br><br>
-    <label for="lname">Позиция по Y:</label>
+    <label for="lname">Координата 2:</label>
     <input id="posY" name="posY" pattern="[0-9.]+" type="text"><br><br>
     <label for="lname">Описание точки:</label>
     <textarea name="desc" id="desc" form="pointForm">Введите здесь описание точки...</textarea><br><br>
